--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <h1 >About me</h1>
   <p> HI! I am Arzan Khan ,A Computer Science student Pursuing Degree urging to become a Full stacker developer with never loosing spirit.My other field of interest are Android developement and Competitive programming.</p>
       <div class="card__img">
-          <img class="my-img" src="img/arzanabt.jpg"/>
+          <img class="my-img" src="img/arzanabt.jpg">
       </div>
       <a href="#about">
         <div class="btnabt btn-abt">
